fix font size to 16px (app breaks on larger sizes)

--- a/src/StructureVisualizer/index.css
+++ b/src/StructureVisualizer/index.css
@@ -1,3 +1,4 @@
 .structure-visualizer {
   width: 450px;
+  font-size: 16px;
 }
